# loandra

./: .gitignore  .gitmodules  Encoder.cc  Encoder.h  ICadical.cc  ICadical.h  INSTALL  LICENSE  Main.cc  Makefile  MaxSAT.cc  MaxSAT.h  MaxSATFormula.cc  MaxSATFormula.h  MaxTypes.h  ParserMaxSAT.h  README.md  SISPropagator.cc  SISPropagator.h  Timer.h  configure.sh  depend.mk
BouMS/: CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  makefile
BouMS/app/: MaxSAT22.c  MaxSAT22.h  common.h  externalsat.c  externalsat.h  main.c
BouMS/inc/BouMS/: BouMS.h  clause_weighting_params.md  common.h  preprocessing.h  wcnf.h  wcnf_util.h
BouMS/inc/private/: align.h  bigint.h  common.h  fixedprec.h  logging.h  nonpartial.h  partial.h  rng.h  types.h
BouMS/lib/: BouMS.c  common.c  decimation.c  filterClauses.c  fixedprec.c  nonpartial.c  partial.c  wcnf_util.c
algorithms/: Alg_CBLIN.cc  Alg_CBLIN.h  Alg_NUWLS.cc  Alg_NUWLS.h  Alg_OLL_ITER.cc  Alg_OLL_ITER.h  Timer.cc  Timer.h
encodings/: Enc_Adder.cc  Enc_Adder.h  Enc_GTE.cc  Enc_GTE.h  Enc_MTotalizer.cc  Enc_SWC.cc  Enc_SWC.h  Enc_Totalizer.cc  Enc_Totalizer.h  Encodings.cc  Encodings.h
maxpre/: AMSLEX.cpp  AMSLEX.hpp  BCE.cpp  BCR.cpp  BIG.cpp  BVA.cpp  BVE.cpp  FLP.cpp  GSLE.cpp  LS.cpp  Makefile  SE.cpp  SIE.cpp  SLE.cpp  SSR.cpp  cardinalityconstraint.cpp  cardinalityconstraint.hpp  clause.cpp  clause.hpp  global.hpp  inputreader.cpp  inputreader.hpp  log.cpp  log.hpp  main.cpp  outputreader.cpp  outputreader.hpp  preprocessedinstance.cpp  preprocessedinstance.hpp  preprocessor  preprocessor.cpp  preprocessor.hpp  preprocessorinterface.cpp  preprocessorinterface.hpp  probleminstance.cpp  probleminstance.hpp  timer.cpp  timer.hpp  touchedlist.cpp  touchedlist.hpp  (+4 more)
solvers/glucose4.1/core/: Solver.cc  Solver.h
solvers/glucose4.1/mtl/: template.mk
